# MusicMouse

./: CMakeLists.txt
src/: DistrhoPluginInfo.h  PluginDSP.cpp  PluginUI.cpp
